--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-moment": "^1.1.2",
     "react-player": "^2.10.0",
     "react-query": "^3.34.19",
+    "react-text-truncate": "^0.18.0",
     "swiper": "^8.1.0"
   },
   "devDependencies": {
